Correcciones de SonarCloud